# Cafemol_jigakuyou

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  cafemol  cafemol_all.inp  cmake_install.cmake  inpファイル解説.inp  proteing.inp
DNAbackmap_src/: DNAbackmap.F90  Makefile  README  check_bp.F90  const_para.F90  end_modeling.F90  ifmod.F90  in_out_file.F90  input.txt  main_modeling.F90  output_pdb.F90  read_pdb.F90  read_references.F90  util_bestfit.F90
aicg/: 2IGD_aicg2.para  2igd.dssp
cmake/: fortran.cmake
mods/cafemol/: gf2xe.mod  if_neighbor.mod  if_readpdb.mod  if_write.mod  mpiconst.mod  mt_kind_defs.mod  mt_stream.mod  time.mod  var_afmfit.mod  var_emin.mod  var_enm.mod  var_file.mod  var_flp.mod  var_inp.mod  var_logger.mod  var_mgo.mod  var_setp.mod  var_simu.mod  var_stage.mod  var_struct.mod
ninfo/: acrb.ninfo  aicg2.ninfo  aicg2plus_pdb.ninfo  dna2c_strand1.ninfo  dna2c_strand2.ninfo  f1atp.ninfo  f1atp2.ninfo  f1atp_alphDP_betaDP.ninfo  f1atp_alphDP_betaTP.ninfo  f1atp_alphE_betaDP.ninfo  f1atp_alphE_betaE.ninfo  f1atp_alphTP_betaE.ninfo  f1atp_alphTP_betaTP.ninfo  f1atp_alpha_DP.ninfo  f1atp_alpha_E.ninfo  f1atp_alpha_TP.ninfo  f1atp_beta_DP.ninfo  f1atp_beta_E.ninfo  f1atp_beta_TP.ninfo  f1atp_gamma.ninfo  gbp1.ninfo  gbp2.ninfo  nucleosome.ninfo  p53-init.ninfo  pro_dna_pwmcos_dna_strand1.ninfo  pro_dna_pwmcos_dna_strand2.ninfo  reca3.ninfo  strand1.ninfo  strand13.ninfo  strand2.ninfo  strand23.ninfo  strand3.ninfo
nucleosome_load_energyminimize/: implement.py  mr_output_ninf_1.data  poly_onto_nuc.inp  poly_onto_nuc2.inp  メモ  色づけ.pse
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時/91bp_move/: 1012.ninfo  1116.ninfo  115.ninfo  12.ninfo  13.ninfo  1316.ninfo  14.ninfo  17.ninfo  215.ninfo  23.ninfo  24.ninfo  25.ninfo  26.ninfo  27.ninfo  37.ninfo  412.ninfo  414.ninfo  67.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/101bp_move/: 115.ninfo  13.ninfo  14.ninfo  17.ninfo  215.ninfo  23.ninfo  24.ninfo  27.ninfo  413.ninfo  513.ninfo  613.ninfo  812.ninfo  813.ninfo  88.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/102bp_move/: 1015.ninfo  115.ninfo  13.ninfo  14.ninfo  17.ninfo  215.ninfo  23.ninfo  24.ninfo  27.ninfo  47.ninfo  77.ninfo  910.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/105bp_move/: 1113.ninfo  112.ninfo  115.ninfo  1212.ninfo  13.ninfo  14.ninfo  1516.ninfo  17.ninfo  214.ninfo  215.ninfo  23.ninfo  24.ninfo  27.ninfo  316.ninfo  35.ninfo  55.ninfo  612.ninfo  616.ninfo  916.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/107bp_move/: 115.ninfo  13.ninfo  14.ninfo  17.ninfo  215.ninfo  23.ninfo  24.ninfo  27.ninfo  39.ninfo  416.ninfo  610.ninfo  711.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/10bp_move/: 111.ninfo  113.ninfo  115.ninfo  1215.ninfo  13.ninfo  1315.ninfo  14.ninfo  1414.ninfo  17.ninfo  213.ninfo  215.ninfo  23.ninfo  24.ninfo  27.ninfo  311.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/115bp_move/: 1115.ninfo  115.ninfo  1214.ninfo  13.ninfo  1314.ninfo  14.ninfo  17.ninfo  215.ninfo  23.ninfo  24.ninfo  27.ninfo  29.ninfo  310.ninfo  313.ninfo  516.ninfo  57.ninfo  714.ninfo  715.ninfo  78.ninfo  814.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/117bp_move/: 1013.ninfo  1016.ninfo  115.ninfo  1216.ninfo  13.ninfo  14.ninfo  17.ninfo  210.ninfo  215.ninfo  22.ninfo  23.ninfo  24.ninfo  27.ninfo
nucleosome_load_energyminimize/RNApoly_ninfo_edit/一時逆方向/119bp_move/: 115.ninfo  116.ninfo  13.ninfo  14.ninfo  17.ninfo  215.ninfo  23.ninfo  (+6 more)
pdb/: 1GGG_1.pdb_2  1WDN_1.pdb_2
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  allocate_fmat.F90  allocate_mgo.F90  allocate_nativestruct.F90  allocate_neighbor.F90  allocate_replica.F90  allocate_simu.F90  cafe_read_dcd.F90  cafe_read_ref.F90  cafe_write_dcd.F90  calc_size_structures.F90  cfunc_id2seq.F90  cfunc_int2char.F90  cfunc_name2one.F90  cmake_install.cmake  config.h.in  const_index.F90  const_maxsize.F90  const_physical.F90  dump_energy_allocated.F90  dump_mloop_simulator.F90  dump_qscore.F90  dump_var_all.F90  dump_var_replica.F90  dump_var_setp.F90  dump_var_struct.F90  dump_var_struct_neighbor.F90  finalize_logger.F90  format.F90  if_energy.F90  if_mloop.F90  if_neighbor.F90  if_readpdb.F90  if_write.F90  ifunc_char2int.F90  ifunc_nn2id.F90  ifunc_seq2hanum.F90  ifunc_seq2id.F90  (+343 more)
src/mt_stream_cafe/: check_stream.F90  f_get_coeff.F90  f_jump_coeff.F90  gf2xe.F90  mt_cafe.F90  mt_kind_defs.F90  mt_stream.F90
src/utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  a2rst.F90  aa2cg.F90  cafe_calc_rmsd.F90  cmake_install.cmake  crd2pdb.F90  dcd2movie.F90  movie2dcd.F90  pdb2crd.F90  show_rst.F90
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_mod_file  test_mod_file.F90  test_mod_logger  test_mod_logger.F90  test_mod_unit  test_mod_unit.F90
utility/: bs  cafe_edit_ts.sh  cafe_movie_making.sh  cafe_movie_making_gengraph.pml  cafe_movie_making_gengraph.pml.not_to_release  go  result_to_example.py
utility/DNA_3spn2c_input_file_gen/: Makefile  nickgap.info  seq.info
utility/DNA_3spn2c_input_file_gen/examples/: bdna.info  gap.info  nick.info
utility/DNA_3spn2c_input_file_gen/utils/: Makefile  build_bdna_curv.sh  gen_cafemol_files.py
utility/PWMcos_input_file_gen/example/: tbp_PWMcos.ninfo  tbp_dnp_cg.psf
utility/RESPAC/pdcp/: CMakeLists.txt
utility/RESPAC/surface/: CMakeLists.txt
utility/respac_batch/: respac.py
(+195 files in other folders)
